# cfr-poker-bot

./: .gitignore  ANALYST_FINDINGS.md  ANALYST_FINDINGS_V2.md  ANALYST_PA_FINDINGS.md  README.md  agent_config.json  agent_test.py  analyze_tournament.py  api_test.py  auto_fetch_logs.py  auto_playwright.py  compare_bots.py  create_release.sh  engine_test.py  fetch_all_matches.js  fetch_all_matches_bulk.js  gym_env.py  import_matches.py  match.py  nlhe-poker.service  opponent_profiler.py  poll_leaderboard.py  pyproject.toml  report.ipynb  requirements.txt  run.py  run_log.txt  sim.py  slumbot_benchmark.py  train_rl_agent.py  watch_logs.py  watch_urls.txt
.github/workflows/: deploy-engine.yml  tests.yml
.streamlit/: config.toml
agents/: agent.py  prob_agent.py  rl_agent.py  spy_agent.py  test_agents.py
docs/: additional-resources.md  game-engine.md  libraries.md  rules.md  submission.md  terminology.md
nlhe/: bot.py  game.py
nlhe/cfr/: abstraction.py  equity.py  opponent.py  preflop.py  preflop_compute.py  solver.py  variance_control.py
nlhe/demo/: app.py  fastapi_app.py
nlhe/tests/: test_abstraction.py  test_bot.py  test_demo.py  test_equity.py  test_game.py  test_preflop.py  test_preflop_compute.py  test_solver.py
submission/: claude2_player.py  player.py  spy_player.py
tests/: test_auto_playwright.py  test_opponent_profiler.py  test_spy_agent.py
tournament_logs/: analyze_losses.py
trips_poker/: README.md
trips_poker/submission/: card_utils.py  compute_range_prior.py  equity.py  logger_sql.py  match_manager.py  opponent.py  player.py  strategy.py
(+23 files in other folders)
