[project]
name = "poker-engine-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "fastapi==0.120.1",
    "gym==0.26.2",
    "gym-notices==0.1.0",
    "h11==0.16.0",
    "idna==3.11",
    "numpy==2.3.4",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "starlette==0.49.1",
    "treys==0.1.8",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
]
